--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -92,7 +92,7 @@ jobs:
     strategy:
       matrix:
         py: ["3.9", "3.8", "3.7", "3.6"]
-        os: [macos-latest, ubuntu-latest]
+        os: [macos-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -110,7 +110,6 @@ jobs:
       - name: build supy-driver
         run: |
           make driver
-          ls -lrt supy-driver/dist/
 
       - name: Store the ${{ matrix.py }} wheel
         uses: actions/upload-artifact@v2
