--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -95,7 +95,7 @@ jobs:
     strategy:
       matrix:
         py: ["3.9", "3.8", "3.7", "3.6"]
-        os: [macos-latest, windows-latest]
+        os: [macOS-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -105,7 +105,7 @@ jobs:
           token: ${{ secrets.PAT }}
 
       - name: fix gfortran on mac
-        if: ${{ matrix.os }} == 'macos-latest'
+        if: ${{ matrix.os }} == 'macOS-latest'
         run: |
           brew reinstall gcc
           which gfortran
