--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -59,7 +59,7 @@ jobs:
           # NOTE: $ docker run -it --rm \
           # NOTE:   quay.io/pypa/manylinux1_x86_64 \
           # NOTE:   ls -1 /opt/python
-          # - cp39-cp39
+          - cp39-cp39
           - cp38-cp38
           - cp37-cp37m
           - cp36-cp36m
@@ -73,15 +73,11 @@ jobs:
       - name: build for ${{ matrix.manylinux-python-target }}
         run: |
           docker run -v $(pwd):/io dockcross/manylinux1-x64 bash -c \
-          "cd /io/supy-driver;gfortran --version; make suews"
-          docker run -v $(pwd):/io dockcross/manylinux1-x64 bash -c \
-          "cd /io/supy-driver;\
-          /opt/python/${{ matrix.manylinux-python-target }}/bin/python -m pip install -r requirements.txt;\
-          /opt/python/${{ matrix.manylinux-python-target }}/bin/python -m pip install numpy==1.15.4;\
-          /opt/python/${{ matrix.manylinux-python-target }}/bin/python setup.py bdist_wheel; \
-          ls -lrt *; \
-          ls -lrt dist/*; \
-          ls -lrt wheelhouse/*"
+          "ln -sf \
+          /opt/python/${{ matrix.manylinux-python-target }}/bin/python \
+          /usr/local/bin/python \
+          cd /io/; \
+          make driver"
 
       - name: Store ${{ matrix.manylinux-python-target }} binary wheel
         uses: actions/upload-artifact@v2
