--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -35,7 +35,7 @@ jobs:
         architecture: 'x64' # (x64 or x86)
 
     - name: fix gfortran on mac
-      if: startsWith(matrix.os, 'macOS')
+      # if: startsWith(matrix.os, 'macOS')
       run: |
         echo $PATH
         which gfortran-10
