--- a/.github/workflows/f-prettify.yml
+++ b/.github/workflows/f-prettify.yml
@@ -60,7 +60,7 @@ jobs:
         make pip
 
     - name: format Fortran code
-      run: fprettify SUEWS-SourceCode/*f95
+      run: fprettify SUEWS-SourceCode/*f95 -i 3 --case 2 2 2 2
 
     # - name: Commit changes
     #   uses: elstudio/actions-js-build/commit@v3
