--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -82,11 +82,11 @@ jobs:
         run: |
           docker run -v $(pwd):/io dockcross/manylinux1-x64 bash -c "cd /io/supy-driver; make suews"
           docker run -v $(pwd):/io dockcross/manylinux1-x64 bash -c \
-          "/opt/python/${{ matrix.manylinux-python-target }}/bin/python -m pip install cryptography==3.3.2"
-          docker run -v $(pwd):/io dockcross/manylinux1-x64 bash -c \
           "ln -sf /opt/python/${{ matrix.manylinux-python-target }}/bin/python /usr/local/bin/python; \
           which python;\
-          cd /io/supy-driver; make test"
+          cd /io/supy-driver; \
+          export CRYPTOGRAPHY_DONT_BUILD_RUST=1;\
+          make test"
 
       - name: Store ${{ matrix.manylinux-python-target }} binary wheel
         uses: actions/upload-artifact@v2
