--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -84,6 +84,7 @@ jobs:
           docker run -v $(pwd):/io dockcross/manylinux1-x64 bash -c \
           "ln -sf /opt/python/${{ matrix.manylinux-python-target }}/bin/python /usr/local/bin/python; \
           which python;\
+          python -m pip install -U pip
           cd /io/supy-driver; \
           export CRYPTOGRAPHY_DONT_BUILD_RUST=1;\
           make test"
