revamp makefile and file structure for SPARTACUS coupling

--- a/.gitignore
+++ b/.gitignore
@@ -334,6 +334,7 @@ supy-driver/wheelhouse/
 test-dev/
 Test/BaseRun/*/SUEWS_V2*
 SUEWS-SourceCode/SUEWS_V20*
+SUEWS-SourceCode/bin/*
 
 # test diff files
 *.diff.csv
