--- a/Test/Makefile
+++ b/Test/Makefile
@@ -20,7 +20,7 @@ endif
 
 SUEWS_dir = ../SUEWS-SourceCode
 
-makefile = Makefile.gfortran
+makefile = Makefile
 
 SuPy_dir = supy-driver
 
@@ -30,12 +30,12 @@ PYTHON := $(if $(PYTHON_exe),$(PYTHON_exe),python)
 
 # test the current version
 test:
-	$(MAKE) -C $(SUEWS_dir) -f $(makefile) clean; # clean Fortran SUEWS build
-	$(MAKE) -C $(SUEWS_dir) -f $(makefile) main; # make SUEWS with the `main` recipe
+	$(MAKE) -C $(SUEWS_dir) clean; # clean Fortran SUEWS build
+	$(MAKE) -C $(SUEWS_dir) suews; # make SUEWS with the `main` recipe
 	cd code; python test_dev.py
 
 clean:
 	rm -rf *.zip
 
 # include common settings
-include $(SUEWS_dir)/include.common
+# include $(SUEWS_dir)/include.common
