--- a/.github/workflows/f-prettify.yml
+++ b/.github/workflows/f-prettify.yml
@@ -12,7 +12,7 @@ on:
   #   tags:        # Array of patterns that match refs/tags.
   #     - v1         # Push events to v1 tag
     paths:       # Push events containing matching files
-      - 'SUEWS-SourceCode/*'
+      - 'SUEWS-SourceCode/src/*'
       - 'supy-driver/*'
       - '.github/workflows/f-prettify.yml'
 
@@ -81,7 +81,7 @@ jobs:
     - name: Add & Commit
       uses: EndBug/add-and-commit@v6.2.0
       with:
-        add: 'SUEWS-SourceCode/*f95'
+        add: 'SUEWS-SourceCode/src/*f95'
         message: "[GH Actions] fprettify source code"
 
 
